--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Basier Circle";
+  src: url(/fonts/BasierCircle-Regular.otf);
+}
